Commentsection and comments in code

--- a/app/partials/department.html
+++ b/app/partials/department.html
@@ -1,3 +1,5 @@
+<!-- Page listing the departments, creating buttons and making them clickable -->
+
 <ng-include></ng-include>
 
 <div class="row">
@@ -6,6 +8,6 @@
 
 	</div>
 	<div class="col-sm-4"ng-repeat="course in list.courses">
-		<a ng-href="#/course/" class="btn btn-info" style="margin-top:20px">{{course.code}} {{course.title | limitTo:15}}...</a>
+		<a ng-href="#/course/{{course.code}}" class="btn btn-info" style="margin-top:20px">{{course.code}} {{course.title | limitTo:15}}...</a>
 	</div>
 </div>
