--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -4,16 +4,9 @@ looks a bit nicer. -->
 
 <div id="home_page" class="container" style="margin:0;padding:0;height:100vh;width:100vw">
 		<div id="home_page_content" class="container" style="margin:100px;background:rgba(255,255,255,0.5);">
-			<h3>In the grim dark past of the pokémon world, there is only war</h3>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-			Aenean commodo ligula eget dolor. Aenean massa. 
-			Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-			Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. 
-			Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. 
-			In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. 
-			Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. </p>
+			<h3>Yucky, sucky, or lucky?</h3>
+			<p>How was the course you just took? </p>
 			<br>
-			<p>start quickly</p>
 			<a href="#/start" class="btn btn-default">Get started</a>
 		</div>
 	</div>
