minor changes to interface

--- a/app/partials/course.html
+++ b/app/partials/course.html
@@ -1,6 +1,6 @@
 <!-- Page for the individual courses. Will go based on course code -->
 
-<ng-include></ng-include>
+<!--	<ng-include src="starCtrl.js"></ng-include>		-->
 
 <div class="row">
 	 <div class="col-sm-12" style="border-style:solid;border-width:1px">
