--- a/app/partials/department.html
+++ b/app/partials/department.html
@@ -8,6 +8,6 @@
 
 	</div>
 	<div class="col-sm-4"ng-repeat="course in list.courses">
-		<a ng-href="#/course/{{course.code}}" class="btn btn-info" style="margin-top:20px">{{course.code}} {{course.title | limitTo:15}}...</a>
+		<a ng-href="#/course/{{course.code}}" class="btn btn-primary" style="margin-top:20px">{{course.code}} {{course.title | limitTo:15}}...</a>
 	</div>
 </div>
