minor ui changes

--- a/app/partials/course.html
+++ b/app/partials/course.html
@@ -3,9 +3,8 @@
 <!--	<ng-include src="starCtrl.js"></ng-include>		-->
 
 <div class="row">
-	 <div class="col-sm-12" style="border-style:solid;border-width:1px">
-		Gör ett anrop till APIn http://www.kth.se/api/kopps/v2/courses/DEPARTMENT.json med korrekt department-kod
-
+	 <div class="col-sm-12">
+		<h1>{{course.title}}</h1>
 	</div>
 	<div class="col-sm-6" id="course-info">
 		<h2>{{course.code}} {{course.title}}</h2>
