--- a/app/partials/department.html
+++ b/app/partials/department.html
@@ -3,9 +3,8 @@
 <ng-include></ng-include>
 
 <div class="row">
-	 <div class="col-sm-12" style="border-style:solid;border-width:1px">
-		Gör ett anrop till APIn http://www.kth.se/api/kopps/v2/courses/DEPARTMENT.json med korrekt department-kod
-
+	 <div class="col-sm-12">
+		<h2>{{list.department}}</h2>
 	</div>
 	<div class="col-sm-4"ng-repeat="course in list.courses">
 		<a ng-href="#/course/{{course.code}}" class="btn btn-primary" style="margin-top:20px">{{course.code}} {{course.title | limitTo:15}}...</a>
